--- a/Code/bm-webapp/src/main/webapp/listDefects.vm
+++ b/Code/bm-webapp/src/main/webapp/listDefects.vm
@@ -59,82 +59,58 @@
 					<img src="images/Base/agregar.png" id="add-icon-img" />
 				</a>
                                 <br/>
-                                <a href="listDefects.do?project_id=${project.projectId}&filter=1" id="filter-icon-link">
-                                    <img src="images/Base/filtrar.png" id="filter-icon-img" />
-                                </a>
+                                <a href="newDefectType.do" id="add-icon-link">
+				Agregar Tipo de Defecto
+				</a>
 			</div>
 			#if ($defects.empty)
 				<h3 id="form-title">No existen defectos registrados para este proyecto.</h3>
 			#else
 				<table id="content-table">
 					<tr>
-						<th>Tarea</th>
-						<th>Encargado</th>
-						<th>Esfuerzo Planeado</th>
-						<th>Esfuerzo Acumulado</th>
-                                                <th>Esfuerzo Restante</th>
-                                                <th>Porcentaje de Avance</th>
+						<th>Defecto</th>
+						<th>Fase de Detección</th>
+						<th>Actividad de Detección</th>
 						<th>Estatus</th>
-						<th>Fecha Inicio</th>
-						<th>Fecha Fin</th>
+						<th>Fecha Detección</th>
 						#if($user.administrator)
 						<th>Acciones</th>
 						#end
 					</tr>
-					#foreach($t in $tasks)
+					#foreach($d in $defects)
 					<tr>
-                                            #if($filter == 0 || ($user.userName == $t.assignedUser.userName && $filter == 1))
-						#if($user.administrator || $t.assignedUser.userName == $user.userName)
-						<td><a href="viewTask.do?project_id=${project.projectId}&task_id=${t.taskID}">${t.taskName}</a></td>
-						#else
-						<td>$display.truncate($t.taskName,20)</td>
-						#end
-						<td>${t.assignedUser.fullName}</td>
-						<td>${t.estimatedHours}</td>
-						<td>${t.investedHours}</td>
-                                                <td>${t.remainingHours}</td>
-                                                #set( $investedHours = $t.investedHours + 0.0 )
-                                                #set( $remainingHours = $t.remainingHours + 0.0 )
-                                                #set( $per = $investedHours/($investedHours + $remainingHours) )
-                                                #set( $per = $math.roundTo(2,$per) * 100 )
-                                                #set( $per = $math.toInteger($per) )
-                                                <td>${per} %</td>
-						#if($t.status == "NOT_STARTED")
-						<td>NO_INICIADA</td>
-						#elseif($t.status == "STARTED")
-						<td>INICIADA</td>
-						#elseif($t.status == "COMPLETED")
-						<td>COMPLETADA</td>
-                                                #elseif($t.status == "CANCELED")
-						<td>CANCELADA</td>
-						#end
-						<td>$date.format(${t.startDate})</td>
-						<td>$date.format(${t.endDate})</td>
-						#if($user.administrator && $t.investedHours == 0 && $t.commentsNumber == 0)
-						<td><a href="#" onclick="confirmErase(${t.taskID})">Borrar</a></td>
-						#end
+                                            <td><a href="viewDefect.do?project_id=${project.projectId}&defect_id=${d.defectID}">${d.defectName}</a></td>
+                                            <td>${d.detectionPhase.phaseName}</td>
+                                            <td>${d.detectionTask.taskName}</td>
+                                            #if($d.defectState == "SUBMITTED")
+                                            <td>ENVIADO</td>
+                                            #elseif($d.defectState == "ACCEPTED")
+                                            <td>ACEPTADO</td>
+                                            #elseif($d.defectState == "FIXED")
+                                            <td>CORREGIDO</td>
+                                            #elseif($d.defectState == "CANCELED")
+                                            <td>CANCELADO</td>
                                             #end
-					</tr>
+                                            <td>${d.openDate}</td>
+                                            #if($user.administrator)
+                                            <td><a href="#" onclick="confirmErase(${d.defectID})">Borrar</a></td>
+                                            #end
+                                        </tr>
 					#end
 				</table>
 			#end
 			<div id="content-footer">
 				<span class="breadcrumb-title">Estas viendo:</span>
-				<span class="breadcrumb-text">${project.projectName} > Todas las tareas</span>
+				<span class="breadcrumb-text">${project.projectName} > Todas los defectos</span>
 				#if($user.administrator)
-				<a href="newTask.do?project_id=${project.projectId}" id="add-icon-link">
+				<a href="newDefect.do?project_id=${project.projectId}" id="add-icon-link">
 					<img src="images/Base/agregar.png" id="add-icon-img" />
 				</a>
+                                <br/>
+                                <a href="newDefectType.do" id="add-icon-link">
+				Agregar Tipo de Defecto
+				</a>
 				#end
-                                #if($filter == 0)
-                                <a href="listTasks.do?project_id=${project.projectId}&filter=1" id="filter-icon-link-bottom">
-                                    <img src="images/Base/filtrar.png" id="filter-icon-img-bottom" />
-                                </a>
-                                #elseif($filter == 1)
-                                <a href="listTasks.do?project_id=${project.projectId}&filter=0" id="seeAll-icon-link-bottom">
-                                    <img src="images/Base/verTodas.png" id="seeAll-icon-img-bottom" />
-                                </a>
-                                #end
 			</div>
 		</div>
     </body>
