--- a/Code/bm-webapp/src/main/webapp/CSS/Style.css
+++ b/Code/bm-webapp/src/main/webapp/CSS/Style.css
@@ -291,6 +291,10 @@ label.error
 #form-title
 {
 	text-align:center;
+        text-decoration:underline;
+        font-size:20px;
+	font-weight:bold;
+        color:indigo;
 }
 .ui-datepicker
 {
