--- a/Code/bm-webapp/src/main/webapp/listReports.vm
+++ b/Code/bm-webapp/src/main/webapp/listReports.vm
@@ -21,7 +21,7 @@
                    "8":"COQ vs CNQ"};
                    tecReports = {"9":"Yield por técnica de detección","10":"Esfuerzo por técnica de detección",
                    "11":"Eficiencia por técnica de detección","12":"Razón de revisión por técnica de detección",
-                   "13":"Pareto por técnica de detección"};
+                   "13":"Número de defectos por técnica de detección"};
                    defectReports = {"14":"Densidad de defectos por usuario","15":"Número de defectos por tipo",
                    "16":"Defectos inyectados y removidos por fase"};
                    level = {"1":"Usuario","2":"Proyecto","3":"Empresa"};
