--- a/Code/bm-webapp/src/main/webapp/modifyTemplate.vm
+++ b/Code/bm-webapp/src/main/webapp/modifyTemplate.vm
@@ -45,8 +45,8 @@
 		<div id="content"> <!--AQUI METER TODOS LOS INPUT, LABELS etc-->
 			<div id="user">
 				<form action="modifyTemplate.do" method="POST" id="user-add-form">
-					<h3 id="form-title">Nueva Plantilla</h3>
-					<table id="user-add">
+					<h3 id="form-title">Modificar Plantilla</h3>
+					<table id="template-modify">
 						<tr>
 							<td colspan='2' class="explanatory-note-cell">
 								<span class="explanatory-note">
@@ -92,7 +92,7 @@
 						</tr>
                                                 <tr>
                                                         <td>
-                                                                <a href="addTemplateElement.do?userName=${user.userName}&templateId=${t.templateId}" id="cancel-link">Cancelar</a>
+                                                                <a href="addTemplateElement.do?userName=${user.userName}&templateId=${t.templateId}" id="add-element">Añadir elemento</a>
                                                         </td>
                                                         <td>
                                                             
@@ -107,6 +107,24 @@
 							</td>
 						</tr>
 					</table>
+                                        #if ($elements.empty)
+                                            <h3 id="form-title">Plantilla vacia.</h3>
+                                        #else
+                                            <table id="content-table">
+                                                <tr>
+                                                    <th>Categoria</th>
+                                                    <th>Descripcion</th>
+                                                    <th></th>
+                                                    <th></th>
+                                                </tr>
+                                                #foreach($e in $elements)
+                                                <tr>
+                                                    <th>${e.defectTypeName}</th>
+                                                    <th>${e.elementDescription}</th>
+                                                </tr>
+                                                #end
+                                            </table>
+                                        #end
 				</form>
 			</div>
 		</div>
