--- a/Code/bm-webapp/src/main/webapp/defectosInyectadosRemovidos.vm
+++ b/Code/bm-webapp/src/main/webapp/defectosInyectadosRemovidos.vm
@@ -43,8 +43,7 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <!--<div id="content-header"> -->
+        <div id="chart-content">
                 <span id="DefectsInyectedRemoved">Inyected and Removed Defects by Phase Chart</span>
 
                     <script type="text/javascript">
@@ -53,8 +52,10 @@
                         defectsInyectedRemovedChart.setXMLData("$defectsInyectedRemovedXML");
                         defectsInyectedRemovedChart.setTransparent(true);
                         defectsInyectedRemovedChart.render("DefectsInyectedRemoved");
-                    </script>
-            <!--</div>-->
+                    </script>            
+        </div>
+        <div id="text-content">
+            <p>$text</p>
         </div>
         </body>
 </html>
