--- a/Code/bm-webapp/src/main/webapp/densidadDefectosUsuario.vm
+++ b/Code/bm-webapp/src/main/webapp/densidadDefectosUsuario.vm
@@ -43,8 +43,7 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <!--<div id="content-header"> -->
+        <div id="chart-content">
                 <span id="defectDensityChart">Defect Density Chart</span>
 
                     <script type="text/javascript">
@@ -53,8 +52,10 @@
                         defectDensityChart.setXMLData("$defectDensityXML");
                         defectDensityChart.setTransparent(true);
                         defectDensityChart.render("defectDensityChart");
-                    </script>        
-            <!--</div>-->
+                    </script>                    
+        </div>
+        <div id="text-content">
+            <p>$text</p>
         </div>
         </body>
 </html>
