--- a/Code/bm-webapp/src/main/webapp/tecnicasDeteccion.vm
+++ b/Code/bm-webapp/src/main/webapp/tecnicasDeteccion.vm
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Yield Técnicas de detección - BUG-MANAGER</title>
+        <title>Reportes Técnicas de detección - BUG-MANAGER</title>
         <link rel="stylesheet" href="CSS/Style.css" type="text/css" media="screen" />
         <script type="text/javascript" src="./js/jquery-1.4.2.min.js"></script>
         <script type="text/javascript" src="./js/jquery.validate.min.js"></script>
@@ -43,25 +43,26 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <!--<div id="content-header"> -->
-                <span id="reviews">Reviews</span>
+        <div id="chart-content">
+            <span id="reviews">Reviews</span> 
 
-                    <script type="text/javascript">
-                        var ReviewsChart;
-                        if ("$report" == "13"){
-                            ReviewsChart = new FusionCharts( "Charts/Pareto3D.swf",
-                        "myChartId", "400", "300", "0", "1" );
-                        }
-                        else {
-                            ReviewsChart = new FusionCharts( "Charts/Column3D.swf",
-                        "myChartId", "400", "300", "0", "1" );
-                        }
-                        ReviewsChart.setXMLData("$ReviewsXML");
-                        ReviewsChart.setTransparent(true);
-                        ReviewsChart.render("reviews");
-                    </script>
-            <!--</div>-->
+                <script type="text/javascript">
+                    var ReviewsChart;
+                    if ("$report" == "13"){
+                        ReviewsChart = new FusionCharts( "Charts/Pareto3D.swf",
+                    "myChartId", "400", "300", "0", "1" );
+                    }
+                    else {
+                        ReviewsChart = new FusionCharts( "Charts/Column3D.swf",
+                    "myChartId", "400", "300", "0", "1" );
+                    }
+                    ReviewsChart.setXMLData("$ReviewsXML");
+                    ReviewsChart.setTransparent(true);
+                    ReviewsChart.render("reviews");
+                </script>            
+        </div>
+        <div id="text-content">
+            <p>$text</p>
         </div>
         </body>
 </html>
