--- a/Code/bm-webapp/src/main/webapp/totalDefectosTipo.vm
+++ b/Code/bm-webapp/src/main/webapp/totalDefectosTipo.vm
@@ -43,8 +43,7 @@
                 </div>
             </div>
         </div>
-        <div id="content">
-            <!--<div id="content-header"> -->
+        <div id="chart-content">
                 <span id="totalDefectsType">Total Defects by Type Chart</span>
 
                     <script type="text/javascript">
@@ -53,8 +52,10 @@
                         totalDefectsChart.setXMLData("$totalDefectsXML");
                         totalDefectsChart.setTransparent(true);
                         totalDefectsChart.render("totalDefectsType");
-                    </script>
-            <!--</div>-->
+                    </script>            
+        </div>
+        <div id="text-content">
+            <p>$text</p>
         </div>
         </body>
 </html>
